kubernetes-manifests/front-end/front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  labels:
    tier: frontend
    app: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      name: front-end
      labels:
        tier: frontend
        app: front-end
    spec:
      containers:
        - name: front-end
          image: ghcr.io/liberty52/liberty52-front-end:dev-v-2023.09.27-081837
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: ghcrcred
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: front-end
  name: front-end
spec:
  ports:
    - port: 81
      protocol: TCP
      targetPort: 80
  type: NodePort
  selector:
    tier: frontend
    app: front-end
